# hap-hs

./: Hap.hs  README.md  TODO.txt  hap.cabal  package.yaml  stack.yaml  test-whenever.hap
lib/Hap/: Compiler.hs  Language.hs  Operators.hs  Parse.hs  Parser.y  ParserMonad.hs  ParserWrapper.hs  Pretty.hs  Runtime.hs  Token.hs  Tokenizer.x
lib/Hap/Data/: Monoid.hs  Semigroup.hs
lib/Hap/Runtime/: Errors.hs  Types.hs
src/: Main.hs
test/: Main.hs
