name:                hap
version:             0.1.0.0
synopsis:            A Haskell implementation of Hap.
-- description:
homepage:            https://github.com/githubuser/hap-simple#readme
license:             MIT
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
copyright:           2017 Jon Purdy
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hap
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , haskeline
                     , parsec
                     , text
