name:                hap
version:             0.1.0.0
synopsis:            A Haskell implementation of Hap.
-- description:
homepage:            https://github.com/evincarofautumn/hap-hs#readme
license:             MIT
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
copyright:           2017 Jon Purdy
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Hap.Compiler
                     , Hap.Language
                     , Hap.Operators
                     , Hap.Runtime
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , text

executable hap
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hap
                     , haskeline
                     , parsec
                     , text

test-suite hap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , hap
                     , hspec
                     , parsec
